--- a/nginx.conf.j2
+++ b/nginx.conf.j2
@@ -13,7 +13,7 @@ http {
     keepalive_timeout 65;
 
     upstream backend_app {
-        server {{ hostvars['backend']['ansible_host'] | default('127.0.0.1') }}:8080;
+        server {{ hostvars[groups['backend'][0]].ansible_host | default(groups['backend'][0]) }}:8080;
     }
 
     server {
